### Build 14 (until now)
- Throw out the bundled version of scons. Scons is widely available by now and
  the bundled version caused more trouble than it was worth: many incompati-
  bilities, where a distro-supplied version would have worked (svn:r3929)
- Fix bug #2351257 - wrong game tips are shown. (svn:r3809)
- Some improvements of tribes economy and soldier balance (svn:r3793, svn:r3796)
- Added third barbarian campaign (svn:r3790) and improved the already existing ones (svn:r3775, svn:r3788)
- Added a new trigger for scenario maps: Player defeated (svn:r3789)
- In the editor save dialog; initialize the name box with the map name and do not react
  (for example by playing a sound) to clicks in the empty area below the last file in the
  listbox (affects all listboxes in the UI). (svn:r3783)
- Fix bug in build13 that the editor save dialog would use the name of the list item from
  the second last (instead of the last) click. (svn:r3781)
- Added an editor tool to set a new origin in the map. This will make it possible to get
  an island properly centered, instead of divided in 4 corners when a minimap is generated
  with an external tool, such as the one used in the
  [map download section](http://wl.widelands.org/maps/). The button that enables the tool
  is in the map options dialog. (svn:r3778)
- Allow longer text for a world's name and author (to avoid having it cut off like "The
  Widelands Development Tea"). (svn:r3777)
- Do not crash when writing an empty file. (svn:r3773)
- Added two new in game and one new menu song. (svn:r3758, svn:r3800)
- Make more configuration options configurable in the options menu. (svn:r2753)
- Fix bugs in the S2 map loader. Trying to load an invalid file could cause failed
  assertions in debug builds and probably other bugs in release builds. (svn:r3750)
- Added new loading screens for winterland and for barbarian campaigns. (svn:r3748, svn:3797)